--- a/AccountManagement/src/main/resources/application.properties
+++ b/AccountManagement/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port=0
+pring.application.name=account-management-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+spring.devtools.restart.enabled=true
