--- a/DiscoveryService/src/main/resources/application.properties
+++ b/DiscoveryService/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8010
+spring.application.name=discovery-service
+eureka.instance.hostname=localhost
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
+eureka.client.service-url.defaultZone=http://localhost:8010/eureka
