--- a/UsersService/src/main/resources/application.properties
+++ b/UsersService/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.application.name=users-service
 eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
 spring.devtools.restart.enabled=true
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5433/users}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:lenhatthanh}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
