--- a/AccountManagementService/src/main/resources/application.properties
+++ b/AccountManagementService/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=0
 spring.application.name=account-management-service
-eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8010/eureka
 spring.devtools.restart.enabled=true
