--- a/DiscoveryService/src/main/resources/application.properties
+++ b/DiscoveryService/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8010
 spring.application.name=discovery-service
-eureka.instance.hostname=localhost
+eureka.instance.hostname=127.0.0.1
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+eureka.client.service-url.defaultZone=http://127.0.0.1:8010/eureka
