--- a/UsersService/src/main/resources/application.properties
+++ b/UsersService/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.messages.basename=messages/error_en
