PBI-3: Handle login feature and authority all request with access token - Using Spring security - JWT token

--- a/UsersService/src/main/resources/application.properties
+++ b/UsersService/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.messages.basename=messages/error_en
+token.signing.key=wJ6L+8JGZFHY6iPEp7LswQqKR1HJ/XYNE8mU9L7BBCE=
