--- a/UsersService/src/main/resources/application.properties
+++ b/UsersService/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.messages.basename=messages/error_en
 token.signing.key=wJ6L+8JGZFHY6iPEp7LswQqKR1HJ/XYNE8mU9L7BBCE=
+
+logging.level.root=warn
+logging.level.org.springframework.web=debug
+logging.level.org.hibernate=error
